--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -13,11 +13,11 @@ jobs:
     - name: All things angular
       uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.4.0
       with:
-        github_access_token: ${{ secrets.GITHUB_TOKEN }} # see the Configuration section for how you can create secrets
-        build_configuration: staging # The build environment for the app. please look configurations in your angular.json
-        base_href: /my-project/   # make sure this corresponds to https://<your_username>.github.io/<base_href>/
+        github_access_token: ${{ secrets.MY_TOKEN_ACTIONS }} # see the Configuration section for how you can create secrets
+        build_configuration: production # The build environment for the app. please look configurations in your angular.json
+        base_href: /counter/   # make sure this corresponds to https://<your_username>.github.io/<base_href>/
         deploy_branch: gh-pages # The branch the action should deploy to.
-        angular_dist_build_folder: dist/my-project # The folder where your project is supposed to be after running ng build by the action.
+        angular_dist_build_folder: dist/counter/browser # The folder where your project is supposed to be after running ng build by the action.
 
 permissions:
   contents: write # Allow write permission to GITHUB_TOKEN to commit to deploy branch.
